# ragspine

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  llms.txt  pyproject.toml
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  image-publish.yml  release.yml
benchmarks/: BENCH.md  bench_rag.py
config/: company.example.toml
data/golden/: qa_baseline.json  qa_golden_set.jsonl  query_metric_tool_schema.json  retrieval_ab_corpus.jsonl  retrieval_ab_real.jsonl  retrieval_ab_sample.jsonl
deploy/: .dockerignore  .env.example  .gitignore  Dockerfile  POST-RELEASE-TODO.md  README.md  compose.prod.yaml  compose.yaml
deploy/helm/: README.md
docs/: README.md  architecture.md  dify-migration.html  glossary.md  invariants.md  migration-from-langgraph.md  prd-breadth-via-adapters.md  prd-deployment-packaging.md  prd-orchestration-compat.md  prd-pipeline-topology-export.md  prd-quality-depth.md  prd-vector-store-seam.md
docs/adr/: 0001-dual-channel-determinism.md  0002-product-direction.md  0003-audience-oss-library.md  0004-domain-profile-generalization.md  0005-lean-core-experimental-isolation.md  0006-quality-bar-invariants-and-benchmark.md  0007-multilingual-architect-for-five-ship-two.md  0008-prompt-registry-packaging.md  0009-dependency-and-framework-policy.md  0010-intent-parser-security-decoupling.md  0011-python-project-standard-divergences.md  0012-onboarding-complexity-budget.md  0013-dify-workflow-compiler.md  0014-dify-workflow-service-and-safe-execution.md  0015-relation-extractor-provenance-markers.md  0016-retrieval-productization-config.md  0017-conversation-history-generation-only.md  0018-parent-child-store-level-expansion.md  0019-layered-api-facade-and-unified-ingest.md  0020-unified-effective-plan-resolution.md
docs/llms/: api.md  gotchas.md  overview.md  recipes.md
docs/plans/: adr0004-domainprofile.md
examples/: minimal_rag.py
packaging/rag-spine-alias/: README.md  pyproject.toml
ragspine/: __init__.py
ragspine/agent/: CLAUDE.md  __init__.py  agent.py  intent.py  llm_provider.py  query_tools.py  security_gate.py
ragspine/common/: CLAUDE.md  __init__.py  company_profile.py  core.py  glossary.py  observability.py  sensitivity.py
ragspine/eval/: CLAUDE.md  extraction_eval.py  qa_eval.py
ragspine/extraction/: CLAUDE.md  ir.py
ragspine/ingestion/: CLAUDE.md  __init__.py
ragspine/pipeline/: CLAUDE.md  __init__.py  topology.py
ragspine/retrieval/: CLAUDE.md
ragspine/service/: CLAUDE.md  config.py
ragspine/storage/: CLAUDE.md  __init__.py  fact_store.py
scripts/: ask.py  build_docs.py  check_doc_drift.py  check_docstring_refs.py  ci.sh  classify_pdfs.py  eval_retrieval_ab.py  export_workflow_catalog.py  generate_workflow_catalog.py  ingest.py  ingest_narrative.py  lint.sh  make_fixtures_excel.py  make_fixtures_pdf.py  make_fixtures_pptx.py  make_synthetic_deck.py  run_demo.py  run_dify_workflow.py  run_qa_eval.py  run_server.py  run_worker.py  topology.py
src/ragspine/: __init__.py  facade.py  session.py
studio/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
studio/src/: App.tsx  index.css  launch.ts  main.tsx
tests/: conftest.py  test_api_health.py  test_ask_e2e.py  test_chunk_store.py  test_chunking.py  test_color_semantics.py  test_company_generalization.py  test_company_profile.py  test_composite.py  test_embedding_backends.py  test_embedding_deterministic.py  test_extraction_eval.py  test_facade.py  test_facade_graph_auto.py  test_fixture_regeneration.py  test_ingest_jobs.py  test_ingestion.py  test_manifest.py  test_package_api.py  test_pdf_digital_extractor.py  test_pdf_router.py  test_qa_eval.py  test_retrieval.py  test_retrieval_ab.py  test_review_queue.py  test_scanned_gpu.py  test_service_integration.py  test_task_queue.py  test_workspace_config.py  test_xlsx_styled_extractor.py
tests/agent/: test_agent_orchestrator.py  test_answer_plain.py  test_composite.py  test_external_entity_guard.py  test_history.py  test_intent.py  test_intent_parser.py  test_llm_provider.py  test_query_decompose.py  test_query_tools_schema.py  test_query_transform.py  test_security_gate.py  test_streaming_provider.py
tests/budget/: test_db_guard_budget.py  test_example_smoke_budget.py  test_import_graph_budget.py  test_minimal_api_budget.py  test_signature_budget.py
tests/cli/: test_cli.py  test_serve.py
tests/common/: test_company_generalization.py  test_domain_profile.py  test_domain_profile_vocab_frozen.py  test_observability_resilience.py  test_sensitivity.py
tests/conformance/: conftest.py  test_chunker_provenance.py  test_extractor_provenance.py  test_fact_store.py  test_graph_store.py  test_history_isolation.py  test_metadata_filter_invariants.py  test_multi_index_isolation.py  test_parent_child_isolation.py  test_retrieval_mode_invariants.py  test_source_connector_provenance.py  test_source_lineage_e2e.py  test_trace_sink.py  test_vector_store_contract.py  test_vector_store_invariants.py  test_vector_store_suite.py
tests/diagnostics/: test_config_doctor.py
tests/dify/: __init__.py  conftest.py  test_p0_scaffold.py  test_p1_parse.py  test_p2_ir.py  test_p3_codegen.py  test_p4_parallel_iteration.py  test_p5_optimize.py  test_p6_api_cli.py  test_p7_deepening.py  test_p8_node_trace.py  test_p9_extended_nodes.py
tests/e2e/: test_ask_e2e.py  test_e2e.py  test_fixture_regeneration.py
tests/eval/: test_ci_wires_eval_gate.py  test_groundedness.py  test_lab_domain.py  test_qa_eval.py  test_qa_eval_fabrication_frozen.py  test_qa_eval_groundedness.py
tests/extraction/: test_docspine_extractor.py  test_extractor_registry.py  test_ir.py  test_pptspine_extractor.py
tests/graph/: test_graph_query.py  test_graph_store.py  test_narrative_graph.py  test_relation_extractor.py  test_relation_graph.py
tests/ingestion/: test_docx_ingest_dispatch.py  test_ingest_cli.py  test_ingest_dispatch.py
tests/n8n/: __init__.py  conftest.py  test_parse.py  test_roundtrip.py  test_to_dify.py  test_to_n8n.py  test_variables.py
(+490 files in other folders)
