[project]
name = "rag-spine"
version = "0.1.2"
description = "Framework-free backend RAG: deterministic dual-channel retrieval + agent orchestration with built-in anti-fabrication and source provenance."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "lin han", email = "voldemort22@126.com" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "agent",
    "retrieval",
    "bm25",
    "anti-fabrication",
    "framework-free",
    "rag-engine",
]
# 注：license 用 SPDX 表达式（PEP 639），故【不】再加 "License ::" 分类器（避免与 twine 冲突）。
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "rootutils>=1.0.7",
    "pypdfium2>=5.0",
    # company profile TOML 读取：3.11+ 用 stdlib tomllib（无需此包），仅 3.10 需 tomli。
    "tomli>=2.0; python_version < '3.11'",
    # 运行时类型契约（ADR 0004 质量门）：import 期对全包注解强制执行，与 mypy --strict
    # 的静态半边互补。守护式 import（见 src/ragspine/__init__.py）使其缺失时仍可离线运行，
    # 但列为核心依赖以保证零警告门默认开启。
    "beartype>=0.18",
]

[project.urls]
Homepage = "https://github.com/VoldemortGin/ragspine"
Repository = "https://github.com/VoldemortGin/ragspine"
Issues = "https://github.com/VoldemortGin/ragspine/issues"

[project.scripts]
ragspine = "ragspine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    # PDF fixture 生成（scripts/make_fixtures_pdf.py 绘制用，BSD-3）。
    "reportlab>=4.0",
    # 文档站构建（scripts/build_docs.py，md→HTML，BSD）。
    "markdown>=3.5",
    # API 参考站构建（make docs，pdoc 从 docstring + 类型注解生成静态 HTML，MIT/Unlicense）。
    "pdoc>=14",
    # 可选 lint / type-check（scripts/lint.sh，目前为非阻塞信息性步骤）。
    "ruff>=0.6",
    "mypy>=1.11",
    # 打包 / 发布工具（make build：python -m build；twine check/upload 到 PyPI）。
    "build>=1.2",
    "twine>=5.0",
]
# 二期 PDF 线的重依赖（数字型 PDF 表格解析），绿色实现阶段才安装。
pdf = [
    "docling>=2.0.0",
]
# 三期扫描线的重依赖（扫描型 PDF OCR/VLM 抽取），仅在 Ubuntu+NVIDIA GPU 上的
# 真实集成测试阶段安装。注意：paddlepaddle-gpu 需按官方指引在 Ubuntu 上单独装
# （CUDA 版本相关，不在此声明，避免在非目标平台误装）。
ocr = [
    "paddleocr>=3.0",
]
# Agent 编排层接真实 Claude 时安装（mock 模式不需要，SDK 延迟 import）。
# openai：OpenAIEmbeddingBackend（src/embedding_backends）用，同样延迟 import。
llm = [
    "anthropic>=0.40.0",
    "openai>=1.0",
]
# 通用 SentenceTransformer 向量后端（默认 Qwen3-Embedding-0.6B）。
# 延迟 import：不装也能 import 模块、跑离线/纯 BM25 默认；transformers/torch 由其带入。
# 真实模型加载/编码在 GPU 盒子上跑（pytest -m gpu），不在离线单测内。
#
# transformers 上界（仅 darwin）：embed 与 pdf（docling）共享 transformers 传递依赖。
# docling-ibm-models 在 macOS 上要求 transformers<5.9.0（新版 rt_detr_v2 layout 模型在
# Apple MPS 上用 float64，而 MPS 不支持 → docling 数字 PDF 抽取整列报错）。sentence-transformers
# 自身放行到 <6.0，若【单独】安装 embed 会把 transformers 顶到 5.12.x，越过 docling 的上界、
# 打断本机 docling 测试链。故在此镜像 docling 的 darwin 上界，保证两个 extra 任意安装顺序下共存；
# 非 darwin（GPU 盒子）不加此限——docling 在 Linux 放行到 <6.0，真实编码可用最新 transformers。
embed = [
    "sentence-transformers>=3.0",
    "transformers<5.9.0; sys_platform == 'darwin'",
]
# 可插拔向量存储后端（VectorStore 缝的真实 adapter）。延迟 import：不装也能 import 核心、
# 跑零依赖 InProcessVectorStore 默认；装了即由 make_vector_store('sqlite_vec'|'pgvector'|'qdrant') 选用。
# sqlite-vec：嵌入式 sqlite 扩展（Apache-2.0/MIT，permissive，零服务，conformance 装了即跑）。
# pg8000：pgvector 适配器的纯 Python Postgres 驱动（BSD，permissive）——刻意【不用】psycopg(LGPL)，
#   ADR 0009 的 ≤Apache-2.0 许可门排除 LGPL。pgvector conformance 需外部 PG（RAGSPINE_PG_URL）故默认 skip。
# qdrant-client：Qdrant 适配器驱动（Apache-2.0，permissive，过 ADR 0009 的 ≤Apache-2.0 许可门，同 sqlite-vec）。
#   用 local 模式（:memory: / path=）纯进程内、零服务，故 qdrant conformance 装了即跑、无需 env 门。
vector = [
    "sqlite-vec>=0.1.6",
    "pg8000>=1.30",
    "qdrant-client>=1.7",
]
# 服务层：FastAPI HTTP 层 + RQ/Redis 异步任务队列（docs/09 PRD）。
# rq/redis 延迟 import（RQQueue 内），不装也能 import task_queue、用 FakeQueue 跑离线测试。
# httpx 供 fastapi.testclient 的 TestClient 使用（服务层测试必需）。
service = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "rq>=1.16",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragspine"]

[tool.pytest.ini_options]
markers = [
    "gpu: 需要 Ubuntu+NVIDIA GPU 与真实 OCR 模型，本地默认跳过",
    "docling: 走 docling 重模型抽取的测试；ci.sh 放独立进程跑，避免全套并跑时的第三方不确定性",
]
# 零警告门：把警告升级为错误（我们的代码必须零警告），仅放行已知的第三方 deprecation。
filterwarnings = [
    "error",
    "ignore:Using `httpx` with `starlette.testclient`",     # starlette TestClient（第三方）
    "ignore:This field is deprecated. Use `generate_page_images",  # docling 管线（第三方）
]

# Lint config exists so cleanup is incremental and consistent; the CI gate does NOT yet
# block on ruff (the extracted codebase predates linting — see scripts/lint.sh).
[tool.ruff]
line-length = 100
target-version = "py310"
# src 布局：把 src/ 标为第一方根，isort（I 规则）才能正确把 `import ragspine` 归到一方分组。
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # long lines are abundant in the inherited code; don't gate on them yet

# Strict static typing on the library (ADR 0004 quality bar: "no warnings = qualified").
# Gate: `mypy ragspine` (ci.sh). tests/ + scripts/ are intentionally out of scope.
[tool.mypy]
python_version = "3.10"
files = ["src/ragspine"]
strict = true

# Third-party packages without type stubs — ignore their missing imports rather than
# vendoring stubs (most are lazy-imported optional extras).
[[tool.mypy.overrides]]
module = [
    "anthropic.*", "openai.*", "openpyxl.*", "paddleocr.*", "pypdfium2.*",
    "sentence_transformers.*", "tomli", "docling.*", "rq.*", "redis.*",
    "pptx.*", "markdown.*", "reportlab.*", "rootutils.*", "sqlite_vec.*", "pg8000.*",
    "qdrant_client.*",
]
ignore_missing_imports = true
