[project]
name = "rag-spine"
version = "0.5.0"
description = "Framework-free backend RAG: deterministic dual-channel retrieval + agent orchestration with built-in anti-fabrication and source provenance."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "lin han", email = "voldemort22@126.com" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "agent",
    "retrieval",
    "bm25",
    "anti-fabrication",
    "framework-free",
    "rag-engine",
]
# 注：license 用 SPDX 表达式（PEP 639），故【不】再加 "License ::" 分类器（避免与 twine 冲突）。
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    # Spine 家族薄共享核（ADR 0001 D3/D5）：domain-neutral 底层原语（缝注册表 / 隐私
    # trace 形状 / conformance 基座 / 配置加载 / 统一异常）。corespine 自身 dependencies
    # 恒为空，不引入任何重依赖；本地开发经下方 [tool.uv.sources] 指向同家族目录里的源码。
    "corespine>=0.1.1",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "rootutils>=1.0.7",
    "pypdfium2>=5.0",
    # company profile TOML 读取：requires-python >= 3.11，用 stdlib tomllib，无需第三方 tomli。
    # 运行时类型契约（ADR 0004 质量门）：import 期对全包注解强制执行，与 mypy --strict
    # 的静态半边互补。守护式 import（见 src/ragspine/__init__.py）使其缺失时仍可离线运行，
    # 但列为核心依赖以保证零警告门默认开启。
    "beartype>=0.18",
]

[project.urls]
Homepage = "https://github.com/VoldemortGin/ragspine"
Repository = "https://github.com/VoldemortGin/ragspine"
Issues = "https://github.com/VoldemortGin/ragspine/issues"

[project.scripts]
ragspine = "ragspine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    # PDF fixture 生成（scripts/make_fixtures_pdf.py 绘制用，BSD-3）。
    "reportlab>=4.0",
    # 文档站构建（scripts/build_docs.py，md→HTML，BSD）。
    "markdown>=3.5",
    # API 参考站构建（make docs，pdoc 从 docstring + 类型注解生成静态 HTML，MIT/Unlicense）。
    "pdoc>=14",
    # 可选 lint / type-check（scripts/lint.sh，目前为非阻塞信息性步骤）。
    "ruff>=0.6",
    "mypy>=1.11",
    # 打包 / 发布工具（make build：python -m build；twine check/upload 到 PyPI）。
    "build>=1.2",
    "twine>=5.0",
]
# 二期 PDF 线的默认引擎（数字型 PDF 表格解析）：pdfspine —— 纯 Rust、确定性、
# abi3-py311 预编译 wheel，无 torch 重依赖（体积 30-50M，对比 docling 链 ~600M）。
# 延迟 import（pdf_spine_extractor 函数体内），不装 [pdf] 也能 import 核心、跑离线默认。
pdf = [
    "pdfspine>=0.0.4",
]
# 可选 docling 兜底引擎（历史默认，现降级）。仅当需要 docling 的版面/表格模型（重依赖
# torch/transformers，~600M）时安装，注入 DoclingGridExtractor 即走旧路径。
# transformers 上界（仅 darwin）：docling-ibm-models 在 macOS 上要求 transformers<5.9.0
# （新版 rt_detr_v2 layout 模型在 Apple MPS 上用 float64，而 MPS 不支持 → docling 数字 PDF
# 抽取整列报错）。此上界纯为 docling 服务，故随引擎一并放在本 extra；[embed] 自身放行到最新。
pdf-docling = [
    "docling>=2.0.0",
    "transformers<5.9.0; sys_platform == 'darwin'",
]
# 三期扫描线的重依赖（扫描型 PDF OCR/VLM 抽取），仅在 Ubuntu+NVIDIA GPU 上的
# 真实集成测试阶段安装。注意：paddlepaddle-gpu 需按官方指引在 Ubuntu 上单独装
# （CUDA 版本相关，不在此声明，避免在非目标平台误装）。
ocr = [
    "paddleocr>=3.0",
]
# Agent 编排层接真实 Claude 时安装（mock 模式不需要，SDK 延迟 import）。
# openai：OpenAIEmbeddingBackend（src/embedding_backends）用，同样延迟 import。
llm = [
    "anthropic>=0.40.0",
    "openai>=1.0",
]
# 通用 SentenceTransformer 向量后端（默认 Qwen3-Embedding-0.6B）。
# 延迟 import：不装也能 import 模块、跑离线/纯 BM25 默认；transformers/torch 由其带入。
# 真实模型加载/编码在 GPU 盒子上跑（pytest -m gpu），不在离线单测内。
# 默认 PDF 引擎已切到 pdfspine（无 transformers），故 embed 不再需要镜像 docling 的
# transformers 上界；该上界已随 docling 迁入 [pdf-docling]，仅在显式安装 docling 兜底时生效。
embed = [
    "sentence-transformers>=3.0",
]
# 可插拔向量存储后端（VectorStore 缝的真实 adapter）。延迟 import：不装也能 import 核心、
# 跑零依赖 InProcessVectorStore 默认；装了即由 make_vector_store('sqlite_vec'|'pgvector'|'qdrant') 选用。
# sqlite-vec：嵌入式 sqlite 扩展（Apache-2.0/MIT，permissive，零服务，conformance 装了即跑）。
# pg8000：pgvector 适配器的纯 Python Postgres 驱动（BSD，permissive）——刻意【不用】psycopg(LGPL)，
#   ADR 0009 的 ≤Apache-2.0 许可门排除 LGPL。pgvector conformance 需外部 PG（RAGSPINE_PG_URL）故默认 skip。
# qdrant-client：Qdrant 适配器驱动（Apache-2.0，permissive，过 ADR 0009 的 ≤Apache-2.0 许可门，同 sqlite-vec）。
#   用 local 模式（:memory: / path=）纯进程内、零服务，故 qdrant conformance 装了即跑、无需 env 门。
vector = [
    "sqlite-vec>=0.1.6",
    "pg8000>=1.30",
    "qdrant-client>=1.7",
]
# Dify 工作流编译器（ragspine.dify）的边界依赖：
# - PyYAML（MIT，permissive，过 ADR 0009 的 ≤Apache-2.0 许可门）：parse 段经 yaml.safe_load
#   把 .yml 文本读成 dict；延迟 import（loader.py 内）。
# - pydantic（MIT，permissive）：parse 段边界校验（schema.py），符合「pydantic at boundaries」。
#   [service] 经 fastapi 传递带入 pydantic，但 [dify] 不经 fastapi，故在此显式声明。
# 三者只在 parse 段需要；codegen/optimize 段纯 stdlib。不装 [dify] 也能 import ragspine 与多数
# 核心，只有真正调用 compile_dify_yaml / parse_dify_yaml 那条链才需要它们。
dify = [
    "PyYAML>=6.0",
    "pydantic>=2.0",
]
# 服务层：FastAPI HTTP 层 + RQ/Redis 异步任务队列（docs/09 PRD）。
# rq/redis 延迟 import（RQQueue 内），不装也能 import task_queue、用 FakeQueue 跑离线测试。
# httpx 供 fastapi.testclient 的 TestClient 使用（服务层测试必需）。
# PyYAML：/v1/dify/* 端点延迟 import ragspine.dify 编译器（parse 段 yaml.safe_load）所需；
#   pydantic 已由 fastapi 传递带入，故 [service] 装齐即可调 dify 三端点，无需另装 [dify]。
service = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "rq>=1.16",
    "redis>=5.0",
    "PyYAML>=6.0",
]
# 一键装齐全部功能依赖（不含开发用 dev）。自引用聚合：改子 extra 无需同步维护此处。
# GPU 与否无需在此区分——torch/transformers/paddleocr 装的是自适应版，运行时探测到
# CUDA 即用 GPU、否则回落 CPU；embed 的 transformers 上限已按 darwin 平台标记处理。
all = [
    "rag-spine[pdf,ocr,llm,embed,vector,service,dify]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragspine"]

# 面向 AI 消费者的使用文档随 wheel 出货，装后在 site-packages/ragspine/_llms/ 可读
# （llms.txt 索引 + docs/llms/*.md）。映射到包内 _llms/，不污染 ragspine 命名空间的导入面。
[tool.hatch.build.targets.wheel.force-include]
"llms.txt" = "ragspine/_llms/llms.txt"
"docs/llms" = "ragspine/_llms/docs"

# 本地开发把 corespine 指向同家族目录里的源码（可编辑）；发布层面二者各自独立发版。
[tool.uv.sources]
corespine = { path = "../corespine", editable = true }

[tool.pytest.ini_options]
markers = [
    "gpu: 需要 Ubuntu+NVIDIA GPU 与真实 OCR 模型，本地默认跳过",
    "docling: 走 docling 重模型抽取的测试；ci.sh 放独立进程跑，避免全套并跑时的第三方不确定性",
]
# 零警告门：把警告升级为错误（我们的代码必须零警告），仅放行已知的第三方 deprecation。
filterwarnings = [
    "error",
    "ignore:Using `httpx` with `starlette.testclient`",     # starlette TestClient（第三方）
    "ignore:This field is deprecated. Use `generate_page_images",  # docling 管线（第三方）
]

# Lint config exists so cleanup is incremental and consistent; the CI gate does NOT yet
# block on ruff (the extracted codebase predates linting — see scripts/lint.sh).
[tool.ruff]
line-length = 100
target-version = "py311"
# src 布局：把 src/ 标为第一方根，isort（I 规则）才能正确把 `import ragspine` 归到一方分组。
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# E501: long lines are abundant in the inherited code; don't gate on them yet.
# UP042: `class X(str, Enum)` is intentional (stable, explicit str-mixin); the StrEnum
#   migration changes str()/format semantics, so we keep the existing pattern as-is.
ignore = ["E501", "UP042"]

# Strict static typing on the library (ADR 0004 quality bar: "no warnings = qualified").
# Gate: `mypy ragspine` (ci.sh). tests/ + scripts/ are intentionally out of scope.
[tool.mypy]
python_version = "3.11"
files = ["src/ragspine"]
strict = true

# Third-party packages without type stubs — ignore their missing imports rather than
# vendoring stubs (most are lazy-imported optional extras).
[[tool.mypy.overrides]]
module = [
    "anthropic.*", "openai.*", "openpyxl.*", "paddleocr.*", "pypdfium2.*",
    "sentence_transformers.*", "docling.*", "pdfspine.*", "rq.*", "redis.*",
    "pptx.*", "markdown.*", "reportlab.*", "rootutils.*", "sqlite_vec.*", "pg8000.*",
    "qdrant_client.*", "yaml",
]
ignore_missing_imports = true
